docs/book/samples/appb/argv_noarg.out
error[endpoint]: unhandled err reached the executor: "missing index 1"
  born in first at argv.kso:2
