docs/book/samples/appb/argv_noarg.manual
argv variant with no source file; output reconstructed from a real run with no argument
